# 2048

./: .gitignore  README.md  meson.build
scripts/: copy_deps.py  dlls_list.txt  start.sh
src/: assets.hpp  audio.hpp  constants.hpp  main.cpp  state.hpp  struct.hpp  utils.hpp
src/animation/: transition.hpp
src/element/: button.hpp  checkbox.hpp  fps_hud.hpp
src/game/: board.hpp
src/screen/: game.hpp  game_over.hpp  intro.hpp  main_menu.hpp  pause.hpp  saves.hpp  screen.hpp  settings.hpp  transition.hpp  win.hpp
